Fix header, footer spacing

--- a/src/app/components/app.css
+++ b/src/app/components/app.css
@@ -32,7 +32,8 @@ footer {
 }
 
 img {
-  width: 20%;
+  flex: 5;
+  margin: auto;
   border-bottom: 2px solid gray;
   border-top: 2px solid gray;
 }
@@ -40,6 +41,12 @@ img {
 a {
   outline: none;
   text-decoration: none;
+}
+
+.banner {
+  display: flex;
+  flex: 1;
+  justify-content: center;
 }
 
 .nav {
